# detectors

./: README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
detectors/: __init__.py
detectors/models/yolo/: model.py
src/detectors/models/backbones/: resnet.py
src/detectors/models/detection/: __init__.py
src/detectors/models/detection/faster_rcnn/: model.py
src/detectors/models/detection/mask_rcnn/: model.py
src/layers/: base.py
src/models/: __init__.py
src/models/classification/resnet/: config.yaml  model.py
src/models/classification/vgg/: config.yaml  layers.py  model.py  test.py  vgg16.yaml  vgg19.yaml
src/models/classification/vgg/config/: vgg16.yaml
src/models/detection/yolo/: model.py
src/models/segmentation/unet/: model.py
tests/: backbone_test.py  fasterrcnn_test.py  maskrcnn_test.py
