[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "detectors"
version = "0.0.1"
authors = [
  { name="phpfontana" },
]
description = "State-of-the-art object detection, segmentation, and tracking implemented with PyTorch."
dependencies = [
    "torch==2.4.0",
    "torchaudio==2.4.0",
    "torchvision==0.19.0",
    "matplotlib==3.9.1.post1",
    "tensorboard==2.17.1"
]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
keywords = ["object-detection", "segmentation", "object-tracking", "pytorch"]

[project.urls]
Homepage = "https://github.com/phpfontana/detectors"
Issues = "https://github.com/phpfontana/detectors/issues"

[tool.setuptools.packages.find]
where = ["src"]
include = ["detectors*"]
exclude = []