[metadata]
name = detectors
version = 0.0.1
author = phpfontana
description = State-of-the-art object detection, segmentation, and tracking implemented with PyTorch.
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = object-detection, segmentation, object-tracking, pytorch
url = https://github.com/phpfontana/detectors

[options]
packages = find:
python_requires = >=3.8
install_requires =
    torch==2.4.0
    torchaudio==2.4.0
    torchvision==0.16.0
    matplotlib==3.9.1.post1
    tensorboard==2.17.1

[options.packages.find]
where = src